# chimmusicplayer

./: CMakeLists.txt  Makefile  README.md  chimmusicplay  chimmusicplayer
src/: chimmusicplay.c  chimmusicplayer.c
src/common/: appstate.h  events.h
src/data/: song_loader.c
src/ops/: playback_ops.c  youtube_ops.c  youtube_ops.h
src/sound/: sound.c
src/sys/: discord_rpc.c  mpris.c
src/ui/: cli.c  input.c  player_ui.c  queue_ui.c  search_ui.c  search_ui.h  settings.c  youtube_ui.c  youtube_ui.h
